// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field overview 0 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Graham_Koch0@yahoo.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Zachery88@gmail.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Angelina16@hotmail.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Monserrate.Johnston54@gmail.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Vance_Brown5@hotmail.com"
    />
  </div>
</DocumentFragment>
`;
